grammar/PromelaParser.py
# Generated from Promela.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PromelaParser ( Parser ):

    grammarFileName = "Promela.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'chan'", "'='", "'['", "']'", "'of'", 
                     "'{'", "','", "'}'", "';'", "'mtype'", "'typedef'", 
                     "'bit'", "'bool'", "'byte'", "'short'", "'int'", "'pid'", 
                     "'active'", "'proctype'", "'('", "')'", "'init'", "'inline'", 
                     "'unless'", "'skip'", "'break'", "':'", "'goto'", "'.'", 
                     "'if'", "'fi'", "'do'", "'od'", "'atomic'", "'d_step'", 
                     "'printf'", "'printm'", "'assert'", "'!'", "'?'", "'<'", 
                     "'>'", "'run'", "'::'", "'->'", "'*'", "'/'", "'%'", 
                     "'+'", "'-'", "'<<'", "'>>'", "'<='", "'>='", "'=='", 
                     "'!='", "'&'", "'^'", "'|'", "'&&'", "'||'", "'~'", 
                     "'++'", "'--'", "'len'", "'empty'", "'full'", "'enabled'", 
                     "'nempty'", "'nfull'", "'timeout'", "'np_'", "'true'", 
                     "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NUMBER", "ID", 
                      "STRING", "COMMENT", "LINE_COMMENT", "WS" ]

    RULE_spec = 0
    RULE_unit = 1
    RULE_chanDecl = 2
    RULE_mtypeDecl = 3
    RULE_typedefDecl = 4
    RULE_varDecl = 5
    RULE_typename = 6
    RULE_proctype = 7
    RULE_init = 8
    RULE_inlineDecl = 9
    RULE_sequence = 10
    RULE_step = 11
    RULE_stmt = 12
    RULE_options = 13
    RULE_option = 14
    RULE_expr = 15

    ruleNames =  [ "spec", "unit", "chanDecl", "mtypeDecl", "typedefDecl", 
                   "varDecl", "typename", "proctype", "init", "inlineDecl", 
                   "sequence", "step", "stmt", "options", "option", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    NUMBER=75
    ID=76
    STRING=77
    COMMENT=78
    LINE_COMMENT=79
    WS=80

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PromelaParser.EOF, 0)

        def unit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PromelaParser.UnitContext)
            else:
                return self.getTypedRuleContext(PromelaParser.UnitContext,i)


        def getRuleIndex(self):
            return PromelaParser.RULE_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpec" ):
                listener.enterSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpec" ):
                listener.exitSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpec" ):
                return visitor.visitSpec(self)
            else:
                return visitor.visitChildren(self)




    def spec(self):

        localctx = PromelaParser.SpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_spec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 13630466) != 0) or _la==76:
                self.state = 32
                self.unit()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(PromelaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mtypeDecl(self):
            return self.getTypedRuleContext(PromelaParser.MtypeDeclContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(PromelaParser.VarDeclContext,0)


        def chanDecl(self):
            return self.getTypedRuleContext(PromelaParser.ChanDeclContext,0)


        def proctype(self):
            return self.getTypedRuleContext(PromelaParser.ProctypeContext,0)


        def init(self):
            return self.getTypedRuleContext(PromelaParser.InitContext,0)


        def inlineDecl(self):
            return self.getTypedRuleContext(PromelaParser.InlineDeclContext,0)


        def typedefDecl(self):
            return self.getTypedRuleContext(PromelaParser.TypedefDeclContext,0)


        def getRuleIndex(self):
            return PromelaParser.RULE_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnit" ):
                listener.enterUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnit" ):
                listener.exitUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnit" ):
                return visitor.visitUnit(self)
            else:
                return visitor.visitChildren(self)




    def unit(self):

        localctx = PromelaParser.UnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_unit)
        try:
            self.state = 47
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.mtypeDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.varDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 42
                self.chanDecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 43
                self.proctype()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 44
                self.init()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 45
                self.inlineDecl()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 46
                self.typedefDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChanDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PromelaParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(PromelaParser.ExprContext,0)


        def typename(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PromelaParser.TypenameContext)
            else:
                return self.getTypedRuleContext(PromelaParser.TypenameContext,i)


        def getRuleIndex(self):
            return PromelaParser.RULE_chanDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChanDecl" ):
                listener.enterChanDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChanDecl" ):
                listener.exitChanDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChanDecl" ):
                return visitor.visitChanDecl(self)
            else:
                return visitor.visitChildren(self)




    def chanDecl(self):

        localctx = PromelaParser.ChanDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_chanDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(PromelaParser.T__0)
            self.state = 50
            self.match(PromelaParser.ID)
            self.state = 51
            self.match(PromelaParser.T__1)
            self.state = 52
            self.match(PromelaParser.T__2)
            self.state = 53
            self.expr(0)
            self.state = 54
            self.match(PromelaParser.T__3)
            self.state = 55
            self.match(PromelaParser.T__4)
            self.state = 56
            self.match(PromelaParser.T__5)
            self.state = 57
            self.typename()
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 58
                self.match(PromelaParser.T__6)
                self.state = 59
                self.typename()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(PromelaParser.T__7)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 66
                self.match(PromelaParser.T__8)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MtypeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PromelaParser.ID)
            else:
                return self.getToken(PromelaParser.ID, i)

        def getRuleIndex(self):
            return PromelaParser.RULE_mtypeDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMtypeDecl" ):
                listener.enterMtypeDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMtypeDecl" ):
                listener.exitMtypeDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMtypeDecl" ):
                return visitor.visitMtypeDecl(self)
            else:
                return visitor.visitChildren(self)




    def mtypeDecl(self):

        localctx = PromelaParser.MtypeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_mtypeDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(PromelaParser.T__9)
            self.state = 70
            self.match(PromelaParser.T__1)
            self.state = 71
            self.match(PromelaParser.T__5)
            self.state = 72
            self.match(PromelaParser.ID)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 73
                self.match(PromelaParser.T__6)
                self.state = 74
                self.match(PromelaParser.ID)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(PromelaParser.T__7)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 81
                self.match(PromelaParser.T__8)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedefDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PromelaParser.ID, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PromelaParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(PromelaParser.VarDeclContext,i)


        def getRuleIndex(self):
            return PromelaParser.RULE_typedefDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedefDecl" ):
                listener.enterTypedefDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedefDecl" ):
                listener.exitTypedefDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedefDecl" ):
                return visitor.visitTypedefDecl(self)
            else:
                return visitor.visitChildren(self)




    def typedefDecl(self):

        localctx = PromelaParser.TypedefDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typedefDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(PromelaParser.T__10)
            self.state = 85
            self.match(PromelaParser.ID)
            self.state = 86
            self.match(PromelaParser.T__5)
            self.state = 88 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 87
                self.varDecl()
                self.state = 90 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 259074) != 0) or _la==76):
                    break

            self.state = 92
            self.match(PromelaParser.T__7)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 93
                self.match(PromelaParser.T__8)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typename(self):
            return self.getTypedRuleContext(PromelaParser.TypenameContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PromelaParser.ID)
            else:
                return self.getToken(PromelaParser.ID, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PromelaParser.ExprContext)
            else:
                return self.getTypedRuleContext(PromelaParser.ExprContext,i)


        def getRuleIndex(self):
            return PromelaParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = PromelaParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.typename()
            self.state = 97
            self.match(PromelaParser.ID)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 98
                self.match(PromelaParser.T__2)
                self.state = 99
                self.expr(0)
                self.state = 100
                self.match(PromelaParser.T__3)


            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 104
                self.match(PromelaParser.T__1)
                self.state = 105
                self.expr(0)


            self.state = 122
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 108
                    self.match(PromelaParser.T__6)
                    self.state = 109
                    self.match(PromelaParser.ID)
                    self.state = 114
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==3:
                        self.state = 110
                        self.match(PromelaParser.T__2)
                        self.state = 111
                        self.expr(0)
                        self.state = 112
                        self.match(PromelaParser.T__3)


                    self.state = 118
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==2:
                        self.state = 116
                        self.match(PromelaParser.T__1)
                        self.state = 117
                        self.expr(0)

             
                self.state = 124
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 125
                self.match(PromelaParser.T__8)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypenameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PromelaParser.ID, 0)

        def getRuleIndex(self):
            return PromelaParser.RULE_typename

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypename" ):
                listener.enterTypename(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypename" ):
                listener.exitTypename(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypename" ):
                return visitor.visitTypename(self)
            else:
                return visitor.visitChildren(self)




    def typename(self):

        localctx = PromelaParser.TypenameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typename)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 259074) != 0) or _la==76):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProctypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PromelaParser.ID, 0)

        def sequence(self):
            return self.getTypedRuleContext(PromelaParser.SequenceContext,0)


        def expr(self):
            return self.getTypedRuleContext(PromelaParser.ExprContext,0)


        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PromelaParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(PromelaParser.VarDeclContext,i)


        def getRuleIndex(self):
            return PromelaParser.RULE_proctype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProctype" ):
                listener.enterProctype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProctype" ):
                listener.exitProctype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProctype" ):
                return visitor.visitProctype(self)
            else:
                return visitor.visitChildren(self)




    def proctype(self):

        localctx = PromelaParser.ProctypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_proctype)
        self._la = 0 # Token type
        try:
            self.state = 173
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(PromelaParser.T__17)
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 131
                    self.match(PromelaParser.T__2)
                    self.state = 132
                    self.expr(0)
                    self.state = 133
                    self.match(PromelaParser.T__3)


                self.state = 137
                self.match(PromelaParser.T__18)
                self.state = 138
                self.match(PromelaParser.ID)
                self.state = 139
                self.match(PromelaParser.T__19)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 259074) != 0) or _la==76:
                    self.state = 140
                    self.varDecl()
                    self.state = 145
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==7:
                        self.state = 141
                        self.match(PromelaParser.T__6)
                        self.state = 142
                        self.varDecl()
                        self.state = 147
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 150
                self.match(PromelaParser.T__20)
                self.state = 151
                self.match(PromelaParser.T__5)
                self.state = 152
                self.sequence()
                self.state = 153
                self.match(PromelaParser.T__7)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.match(PromelaParser.T__18)
                self.state = 156
                self.match(PromelaParser.ID)
                self.state = 157
                self.match(PromelaParser.T__19)
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 259074) != 0) or _la==76:
                    self.state = 158
                    self.varDecl()
                    self.state = 163
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==7:
                        self.state = 159
                        self.match(PromelaParser.T__6)
                        self.state = 160
                        self.varDecl()
                        self.state = 165
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 168
                self.match(PromelaParser.T__20)
                self.state = 169
                self.match(PromelaParser.T__5)
                self.state = 170
                self.sequence()
                self.state = 171
                self.match(PromelaParser.T__7)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sequence(self):
            return self.getTypedRuleContext(PromelaParser.SequenceContext,0)


        def getRuleIndex(self):
            return PromelaParser.RULE_init

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit" ):
                listener.enterInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit" ):
                listener.exitInit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInit" ):
                return visitor.visitInit(self)
            else:
                return visitor.visitChildren(self)




    def init(self):

        localctx = PromelaParser.InitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(PromelaParser.T__21)
            self.state = 176
            self.match(PromelaParser.T__5)
            self.state = 177
            self.sequence()
            self.state = 178
            self.match(PromelaParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InlineDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PromelaParser.ID)
            else:
                return self.getToken(PromelaParser.ID, i)

        def sequence(self):
            return self.getTypedRuleContext(PromelaParser.SequenceContext,0)


        def getRuleIndex(self):
            return PromelaParser.RULE_inlineDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInlineDecl" ):
                listener.enterInlineDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInlineDecl" ):
                listener.exitInlineDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInlineDecl" ):
                return visitor.visitInlineDecl(self)
            else:
                return visitor.visitChildren(self)




    def inlineDecl(self):

        localctx = PromelaParser.InlineDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_inlineDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(PromelaParser.T__22)
            self.state = 181
            self.match(PromelaParser.ID)
            self.state = 182
            self.match(PromelaParser.T__19)
            self.state = 191
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==76:
                self.state = 183
                self.match(PromelaParser.ID)
                self.state = 188
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7:
                    self.state = 184
                    self.match(PromelaParser.T__6)
                    self.state = 185
                    self.match(PromelaParser.ID)
                    self.state = 190
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 193
            self.match(PromelaParser.T__20)
            self.state = 194
